deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-pod
  template:
    metadata:
      labels:
        app: hello-pod
    spec:
      containers:
      - name: hello-world 
        image: ygouzerhviseo/hello:1.0
        ports:
        - containerPort: 8080
