ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: hello-ing
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: hello-svc
              port:
                number: 80
          path: /ygouzerh/hello(/|$)(.*)
          pathType: ImplementationSpecific
